fix: button no-wrap

--- a/hw8_game_tesst/style.css
+++ b/hw8_game_tesst/style.css
@@ -150,10 +150,11 @@ body::before {
 
     #play-button {
         margin-top:5px;
-        width: 20%; 
+        width: 35%; 
     }
     #reset-button{
-        width: 20%;
+        width: 35%;
         margin-top:-5px;
+        text-wrap:nowrap;
     }
 }
